Changelog
=========

0.2 (unreleased)
----------------

- Nothing changed yet.


0.1 (2012-11-05)
----------------

- Initial implementation