@@ -7,6 +7,16 @@ This package enable to monitoring of Zope 2 instance from the command line. It p
 zc.monitor use zc.ngi server and define another thread to handle monitoring. This way you should still be able to monitor your application even if the
 HTTPServer is hanging.
 
+Zope config
+===========
+
+Add this to your ``zope.conf`` to enable the zc.ngi server on the loopback interface on port 8888::
+
+    <product-config five.z2monitor>
+        bind 127.0.0.1:8888
+    </product-config>
+
+
 Probes
 ======
 
@@ -43,3 +53,36 @@ Once you start your instance you should see something like::
 The ngi server is started and you can look up values with netcat for example::
 
   echo 'uptime' | nc -i 1 localhost 8888
+
+plone.recipe.zope2instance
+==========================
+
+If you configure your zope instance using buildout and the plone.recipe.zope2instance recipe (http://pypi.python.org/pypi/plone.recipe.zope2instance).
+To define the zc.z2monitor host and port use the ``zope-conf-additional`` option like this::
+
+  [client1]
+  recipe = plone.recipe.zope2instance
+  http-address = 8080
+  user = admin:admin
+  eggs =
+    ${buildout:eggs}
+  zcml =
+    ${buildout:zcml}
+  zope-conf-additional =
+    <product-config five.z2monitor>
+      bind 127.0.0.1:8888
+    </product-config>
+
+
+Once the instance is running, you will be able to ask the available probes from the
+command line using::
+
+  bin/instance monitor dbinfo main
+
+which is the equivalent to::
+
+  echo 'dbinfo main' | nc -i 1 <zc.monitor host> <zc.monitor port>
+
+To know the registered probes, Use this command::
+
+  bin/instance monitor help
