@@ -4,7 +4,9 @@ Changelog
 0.2 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Add entry point for plone.recipe.zope2instance
+
+- More documentation
 
 
 0.1 (2012-11-05)
